tests/parser-test-files/bad-files/parse-while-let.7.error
error: Malformed while-let expression
  --> test:4:31
   |
 4 |  (define f (while-let :label foo))
   |                                 ^ expected =
